finished pet profiles

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,14 +21,17 @@
     <a href="aboutus.html">About us</a>
   </div>
 
-  <h2>About Us</h2>
-  <p>Some info about our shelter. Hypsilophodon Turiasaurus Auroraceratops Dreadnoughtus Goyocephale Abdallahsaurus
-    Othnielosaurus Tomodon Ratchasimasaurus Ornithotarsus Liaoningotitan Paluxysaurus Regnosaurus Mendozasaurus Calamosaurus Darwinsaurus
-    Teyuwasu Rahonavis Supersaurus Dacentrurus Spinosaurus Phaedrolosaurus Brohisaurus Saldamosaurus Amargasaurus
-    Atlascopcosaurus Pinacosaurus Parksosaurus Agathaumas Neosaurus Camptosaurus Moabosaurus Itemirus Alcovasaurus
-    Mandschurosaurus Nanningosaurus Bakesaurus Lepidocheirosaurus Abdallahsaurus Marasuchus Sinosauropteryx Parvicursor
-    Rhodanosaurus Mahuidacursor Dasygnathus Dianchungosaurus Andesaurus Liassaurus Barilium Acristavus.</p>
-
+  <div class="bodytext">
+    <h2>About Us</h2>
+    <p>
+      Some info about our shelter. Hypsilophodon Turiasaurus Auroraceratops Dreadnoughtus Goyocephale Abdallahsaurus
+      Othnielosaurus Tomodon Ratchasimasaurus Ornithotarsus Liaoningotitan Paluxysaurus Regnosaurus Mendozasaurus Calamosaurus
+      Darwinsauru Yeyuwasu Rahonavis Supersaurus Dacentrurus Spinosaurus Phaedrolosaurus Brohisaurus Saldamosaurus Amargasaurus
+      Atlascopcosaurus Pinacosaurus Parksosaurus Agathaumas Neosaurus Camptosaurus Moabosaurus Itemirus Alcovasaurus
+      Mandschurosaurus Nanningosaurus Bakesaurus Lepidocheirosaurus Abdallahsaurus Marasuchus Sinosauropteryx Parvicursor
+      Rhodanosaurus Mahuidacursor Dasygnathus Dianchungosaurus Andesaurus Liassaurus Barilium Acristavus.
+    </p>
+  </div>
 
 </body>
 
