--- a/howtoadopt.html
+++ b/howtoadopt.html
@@ -21,14 +21,17 @@
     <a href="aboutus.html">About us</a>
   </div>
 
-  <h2>How to Adopt</h2>
-  <p>Here's what you need to do to adopt a pet. Hypsilophodon Turiasaurus Auroraceratops Dreadnoughtus Goyocephale Abdallahsaurus
-    Othnielosaurus Tomodon Ratchasimasaurus Ornithotarsus Liaoningotitan Paluxysaurus Regnosaurus Mendozasaurus
-    Calamosaurus Darwinsaurus Teyuwasu Rahonavis Supersaurus Dacentrurus Spinosaurus Phaedrolosaurus Brohisaurus Saldamosaurus Amargasaurus
-    Atlascopcosaurus Pinacosaurus Parksosaurus Agathaumas Neosaurus Camptosaurus Moabosaurus Itemirus Alcovasaurus
-    Mandschurosaurus Nanningosaurus Bakesaurus Lepidocheirosaurus Abdallahsaurus Marasuchus Sinosauropteryx Parvicursor
-    Rhodanosaurus Mahuidacursor Dasygnathus Dianchungosaurus Andesaurus Liassaurus Barilium Acristavus.</p>
-
+  <div class="bodytext">
+    <h2>How to Adopt</h2>
+    <p>
+      Here's what you need to do to adopt a pet. Hypsilophodon Turiasaurus Auroraceratops Dreadnoughtus Goyocephale Abdallahsaurus
+      Othnielosaurus Tomodon Ratchasimasaurus Ornithotarsus Liaoningotitan Paluxysaurus Regnosaurus Mendozasaurus
+      Calamosaurus Darwinsaurus Teyuwasu Rahonavis Supersaurus Dacentrurus Spinosaurus Phaedrolosaurus Brohisaurus Saldamosaurus Amargasaurus
+      Atlascopcosaurus Pinacosaurus Parksosaurus Agathaumas Neosaurus Camptosaurus Moabosaurus Itemirus Alcovasaurus
+      Mandschurosaurus Nanningosaurus Bakesaurus Lepidocheirosaurus Abdallahsaurus Marasuchus Sinosauropteryx Parvicursor
+      Rhodanosaurus Mahuidacursor Dasygnathus Dianchungosaurus Andesaurus Liassaurus Barilium Acristavus.
+    </p>
+</div>
 
 </body>
 
