--- a/adoptablepets.html
+++ b/adoptablepets.html
@@ -21,15 +21,51 @@
     <a href="aboutus.html">About us</a>
   </div>
 
-  <h2>Adoptable Pets</h2>
-  <p>Take a look at these adoptable pets! Hypsilophodon Turiasaurus Auroraceratops Dreadnoughtus Goyocephale Abdallahsaurus
-    Othnielosaurus Tomodon Ratchasimasaurus Ornithotarsus Liaoningotitan Paluxysaurus Regnosaurus Mendozasaurus
-    Calamosaurus Darwinsaurus
-    Teyuwasu Rahonavis Supersaurus Dacentrurus Spinosaurus Phaedrolosaurus Brohisaurus Saldamosaurus Amargasaurus
-    Atlascopcosaurus Pinacosaurus Parksosaurus Agathaumas Neosaurus Camptosaurus Moabosaurus Itemirus Alcovasaurus
-    Mandschurosaurus Nanningosaurus Bakesaurus Lepidocheirosaurus Abdallahsaurus Marasuchus Sinosauropteryx Parvicursor
-    Rhodanosaurus Mahuidacursor Dasygnathus Dianchungosaurus Andesaurus Liassaurus Barilium Acristavus.</p>
 
+  <h2 class="bodytext">Adoptable Pets</h2>
+
+  <div class="columnpets">
+    <p><strong>Fido</strong>
+      <br>
+      <img src="images/fido.jpg">
+      <br>
+      Favorite things:
+      <ul>
+        <li>Peeing on rugs that really held the room together</li>
+        <br>
+        <li>Being cute enough you have to resist crushing him</li>
+      </ul>
+    </p>
+  </div>
+
+  <div class="columnpets">
+    <p><strong>Rex</strong>
+      <br>
+      <img src="images/rex.jpg">
+      <br>
+      Favorite things:
+      <ul>
+        <li>Looking fierce enough no one will mess with you</li>
+        <br>
+        <li>Actually being scared of everything</li>
+      </ul>
+    </p>
+  </div>
+
+  <div class="columnpets">
+    <p><strong>Rover</strong>
+      <br>
+      <img src="images/Rover.jpg">
+      <br>
+      Favorite things:
+    <ul>
+      <li>Eating things that necessitate a trip to the emergency vet</li>
+      <br>
+      <li>Inviting burglars into your home</li>
+    </ul>
+    </p>
+
+  </div>
 
 </body>
 
